--- a/dashboard/monitoring.html
+++ b/dashboard/monitoring.html
@@ -584,7 +584,60 @@
     <div class="page-wrapper">
         <div class="container-fluid pt-25">
             <!-- Row -->
+            <div class="container">
+                <h1>Masternodes monitoring</h1>
+                <br>
+                <p>Monitor all your masternodes with our monitoring service - anonymous and real time.</p>
+                <br>
+                <div class="row">
 
+                    <div class="col-lg-5">
+                        <div class="form-group">
+                            <form class="form-horizontal" method="post" action="?action=login">
+                                <fieldset>
+                                    <legend>Sign In</legend>
+                                    <div class="form-group">
+                                        <div class="col-lg-12">
+                                            <input type="text" class="form-control" id="inputSeed" name="inputSeed" placeholder="Insert your seed number">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-lg-12">
+                                            <button type="submit" class="btn btn-primary">Sign In</button>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-6">
+                        <form class="form-horizontal" method="post" action="">
+                            <fieldset>
+                                <legend>Create your account</legend>
+                                <div class="form-group">
+                                    <div class="col-lg-12">
+                                        <input type="hidden" name="action" value="register">
+                                        <button type="submit" class="btn btn-primary">Generate new seed number</button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <p><strong>MNO is a masternode coin monitoring and stats service. MNO does not research or recommend any coin. Do your own research and invest at your own risk.</strong></p>
+                <p>ROI changes often and is not the most important factor. Please consider <strong>Dev Team - Community - PURPOSE/Platform - Liquidity - Wallet</strong> when making masternode purchases.</p>
+                <footer>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <hr>
+                            <p>masternodes.online © 2017 - 2018 | Made with love in Panama | Contact us: <a href="mailto:contact@masternodes.online">contact@masternodes.online</a> | Follow us on <a href="https://twitter.com/_mn_o_">Twitter</a> | <a href="https://campaigns.masternodes.online/product-category/coin-listing/" title="List coin on MNO" target="_blank">List Coin on MNO</a> | <a href="https://campaigns.masternodes.online/" title="Advertise with MNO" target="_blank">Advertise</a></p>
+                        </div>
+                    </div>
+                </footer>
+            </div>
             <!-- Footer -->
             <footer class="footer container-fluid pt-10 pb-10  pl-30 pr-30">
                 <div class="row">
