--- a/dashboard/monitoring.html
+++ b/dashboard/monitoring.html
@@ -603,7 +603,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-lg-12">
-                                            <button type="submit" class="btn btn-primary">Sign In</button>
+                                            <button type="button" class="btn btn-primary">Sign In</button>
                                         </div>
                                     </div>
                                 </fieldset>
@@ -618,7 +618,7 @@
                                 <div class="form-group">
                                     <div class="col-lg-12">
                                         <input type="hidden" name="action" value="register">
-                                        <button type="submit" class="btn btn-primary">Generate new seed number</button>
+                                        <button type="button" class="btn btn-primary">Generate new seed number</button>
                                     </div>
                                 </div>
                             </fieldset>
