--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1044,6 +1044,7 @@
 <script src="plugins/assets/js/peity-data.js"></script> 
 <!-- Init JavaScript -->
 <script src="plugins/assets/js/init.js"></script>
+<script src="plugins/assets/js/live_price.js"></script>
 <!--<script src="plugins/assets/js/random-class.js"></script>
 <!-- Form Advance Init JavaScript -->
 <!--
