--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -593,10 +593,12 @@
                 <div class="sm-data-box">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-acedcoin">0.411216</span><i class="mdi mdi-arrow-down text-danger"></i></span> <span class="weight-500 uppercase-font block">Acedcoin (ACED)</span> </div>
-                      <div class="col-xs-6 text-center  pl-0 pr-0 pt-30 data-wrap-right">
-                        <div id="sparkline_1"  class="sparkline-w-100-h-50"></div>
+                      <div class="col-xs-4 text-center  pl-0 pr-0 data-wrap-right" style="padding-top: 23px;">
+                        <div id="sparkline_1"  class="sparkline-w-100-h-50">
+                          <img src="../favicon.png" width="51">
+                        </div>
                       </div>
+                      <div class="col-xs-8 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-acedcoin">0.411216</span><i class="mdi mdi-arrow-down text-danger"></i></span> <span class="weight-500 block" style="margin-left:7px;">AceD (ACED)</span> </div>
                     </div>
                   </div>
                 </div>
@@ -611,10 +613,12 @@
                 <div class="sm-data-box">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-bitcoin">6,095.46</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 uppercase-font block">Bitcoin (BTC)</span> </div>
-                      <div class="col-xs-6 text-center  pl-0 pr-0 pt-30 data-wrap-right">
-                        <div id="sparkline_1_20" class="sparkline-w-100-h-50"></div>
+                      <div class="col-xs-4 text-center  pl-0 pr-0 data-wrap-right" style="padding-top: 23px;">
+                        <div id="sparkline_1_20" class="sparkline-w-100-h-50">
+                          <img src="plugins/assets/img/bitcoin.png" width="51">
+                        </div>
                       </div>
+                      <div class="col-xs-8 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-bitcoin">6,095.46</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 block"  style="margin-left:7px;">Bitcoin (BTC)</span> </div>
                     </div>
                   </div>
                 </div>
@@ -629,10 +633,12 @@
                 <div class="sm-data-box">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-dash">228.7990</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 uppercase-font block">Dash (DASH)</span> </div>
-                      <div class="col-xs-6 text-center  pl-0 pr-0  pt-30 data-wrap-right">
-                        <div id="sparkline_4" class="sparkline-w-100-h-50"></div>
+                      <div class="col-xs-4 text-center  pl-0 pr-0  data-wrap-right" style="padding-top: 23px">
+                        <div id="sparkline_4" class="sparkline-w-100-h-50">
+                          <img src="plugins/assets/img/dash.png" width="51">
+                        </div>
                       </div>
+                      <div class="col-xs-8 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-dash">228.7990</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500  block"  style="margin-left:7px;">Dash (DASH)</span> </div>
                     </div>
                   </div>
                 </div>
@@ -640,24 +646,6 @@
             </div>
           </div>
         </div>
-        <!--<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">-->
-          <!--<div class="panel panel-default card-view pa-0">-->
-            <!--<div class="panel-wrapper collapse in">-->
-              <!--<div class="panel-body pa-0">-->
-                <!--<div class="sm-data-box">-->
-                  <!--<div class="container-fluid">-->
-                    <!--<div class="row">-->
-                      <!--<div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim">8,569 </span><i class="mdi mdi-arrow-up"></i></span> <span class="weight-500 uppercase-font block">Ripple XRP </span> </div>-->
-                      <!--<div class="col-xs-6 text-center  pl-0 pr-0 pt-25  data-wrap-right">-->
-                        <!--<div id="sparkline_1_2"  class="sparkline-w-100-h-50"></div>-->
-                      <!--</div>-->
-                    <!--</div>-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
       </div>
       <!-- Row -->
       <div class="row" style="margin:3% 0;">
