--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -165,7 +165,7 @@
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="monitoring.html" >
-        <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Monitoring</span></div>
+        <div class="pull-left"><i class="mdi mdi-monitor mr-20"></i><span class="right-nav-text">Monitoring</span></div>
         <div class="clearfix"></div>
       </a></li>
 
