--- a/dashboard/email-inbox.html
+++ b/dashboard/email-inbox.html
@@ -157,6 +157,13 @@
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
+      <li><a href="monitoring.html" >
+        <div class="pull-left"><i class="mdi mdi-monitor mr-20"></i><span class="right-nav-text">Monitoring</span></div>
+        <div class="clearfix"></div>
+      </a></li>
+
+      <li><hr class="light-grey-hr mb-10"/></li>
+
       <li> <a  href="ecommerce-products-details.html">
         <div class="pull-left"><i class="mdi mdi-cart mr-20"></i><span class="right-nav-text">Store</span></div>
         <div class="clearfix"></div>
