--- a/dashboard/monitoring.html
+++ b/dashboard/monitoring.html
@@ -30,7 +30,7 @@
         #masternodes_table th, #masternodes_table td{
             text-align: center;
         }
-        #masternodes_table tr th:nth-child(1),#masternodes_table tr td:nth-child(1), #masternodes_table tr th:nth-child(15),#masternodes_table tr td:nth-child(15), #masternodes_table tr th:nth-child(10),#masternodes_table tr td:nth-child(10), #masternodes_table tr th:last-child,#masternodes_table tr td:last-child{
+        #masternodes_table tr th:nth-child(1),#masternodes_table tr td:nth-child(1), #masternodes_table tr th:nth-child(15),#masternodes_table tr td:nth-child(15), #masternodes_table tr th:nth-child(10),#masternodes_table tr td:nth-child(10), #masternodes_table tr th:nth-child(13),#masternodes_table tr td:nth-child(13){
             display: none !important;
         }
 
