fix windows wallet link

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                                             <div class="wpb_single_image wpb_content_element vc_align_center">
 
                                                 <figure class="wpb_wrapper vc_figure">
-                                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/aced-qt_syncfix.exe"><img
+                                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/aced-qt.9.exe"><img
                                                             width="900" height="675" src="3_Image-066.png"
                                                             class="vc_single_image-img attachment-full" alt=""
                                                             srcset="3_Image-066.png 900w, 3_Image-066.png 300w, 3_Image-066.png 768w"
