fix windows wallet link2

--- a/index.html
+++ b/index.html
@@ -583,9 +583,9 @@
                                             <div class="wpb_text_column wpb_content_element  text-block">
                                                 <div class="wpb_wrapper" style="text-align: center;">
                                                     <!--<p>Early supporters program is live, where you will be able to acquire AceD at a rate of 0.75 USD directly from the AceD team. As an added benefit this gives you, the investor, the opportunity to potentially acquire sufficient AceD to set up a Masternode while at the same time assisting in enhancing the accessibility of AceD across exchange sites. Please get in touch with @MaGe-AceD9956 for MN presale inquires.</p>-->
-                                                    <!--<a class="btn btn-alt btn-sm" href="https://github.com/Acedcoin/AceD/releases/download/v1.0/aced-qt.exe" target="_self">Download Wallets</a>-->
+                                                    <!--<a class="btn btn-alt btn-sm" href="https://github.com/Acedcoin/AceD/releases/download/v1.5/aced-qt.9.exe" target="_self">Download Wallets</a>-->
                                                     <div class="coicon">
-                                                        <div><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/aced-qt_syncfix.exe"><img src="windows.png"/></a></div>
+                                                        <div><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/aced-qt.9.exe"><img src="windows.png"/></a></div>
                                                         <div><img src="Linux-icon.png"/></div>
                                                         <div><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/AceD-Qt_syncfix.dmg"><img src="Apple-icon.png"/></a></div>
                                                         <div><img src="raspberry-pi.png"/></div>
